protobuf/protoeditor-core/testData/lang/annotation/DuplicatePackageStatement.proto.testdata
syntax = "proto2";

package foo.bar;

<error descr="Duplicate package statement">package bogus;</error>
<error descr="Duplicate package statement">package bogus2;</error>

message abc {
}
